[package]
name = "advent_of_code"
version = "0.9.2"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>", "BillOTei"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
pico-args = "0.5.0"
array2d = "0.3.2"
queues = "1.1.0"
itertools = "0.12.0"
time = "0.3.31"
pathfinding = "4.6.0"